# logSquid

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
conf/: Makefile.am  Makefile.in  logsquid_agent.conf  logsquid_apache.conf  logsquid_server.conf
misc/: Makefile.am  Makefile.in
misc/database/: agents.sql  logSquid.sql  servers.sql  users.sql
misc/init.d/debian/: logsquid_agent  logsquid_server
misc/init.d/freebsd/: logsquid_agent  logsquid_server
misc/init.d/rdht/: logsquid_agent  logsquid_server
misc/license/: license
misc/systemd/: logsquid_agent.service  logsquid_server.service
src/lib/: config.c  config.h  daemon.c  daemon.h  debug.c  debug.h  lmysql.c  lmysql.h  log.c  log.h  services.c  services.h
src/logsquid_agent/: Makefile.am  Makefile.in  agent.c  agent.h  logsquid_agent.c  readlog.c  readlog.h
src/logsquid_config/: Makefile.am  Makefile.in  logsquid_config.c
src/logsquid_frontend/: Makefile.am  Makefile.in
src/logsquid_frontend/www/: index.php  login.php  wizard.php
src/logsquid_frontend/www/class/: Functions.inc  conectdb.inc  logsquid.inc
src/logsquid_frontend/www/css/: bootstrap.css  logSquid.css  login.css  logsquidpdf.css  msgbox.css  wizard.css
src/logsquid_frontend/www/filters/: ExportFile.js  conectfilter.php  dependences  export.css  filter.js  filters.inc  index.php  logsquidcsv.inc  logsquidhtml.inc  logsquidpdf.inc
src/logsquid_frontend/www/filters/export/: download.php
src/logsquid_frontend/www/functions/: autoload.php  conectclass.php
src/logsquid_frontend/www/graph/: Graph.inc  dependences  graph.php  index.php
src/logsquid_frontend/www/js/: dropdowns-enhancement.js  easter.js  login.js  masonry.js  msgbox.js  switchButton.js
src/logsquid_frontend/www/lang/: pt-BR.php
src/logsquid_frontend/www/pdf/: mpdf.php
src/logsquid_frontend/www/pdf/ttfontdata/: dejavusanscondensed.mtx.php  dejavusanscondensedB.mtx.php  dejavuserifcondensed.mtx.php  dejavuserifcondensedB.mtx.php  dejavuserifcondensedBI.mtx.php
src/logsquid_frontend/www/realtime/: index.php  realtime.inc
src/logsquid_frontend/www/report/: ExportGraph.js  calendar.php  conectgraph.php  conectreport.php  export.css  gTableGraph.js  gTablePdf.js  index.php  report  report.inc  report.js
src/logsquid_frontend/www/services/: Services.inc  Services.js  conectservices.php
src/logsquid_frontend/www/settings/: config.inc  index.php  logSquidconf.inc  settings.js
src/logsquid_frontend/www/tmp/: download.php
src/logsquid_frontend/www/user/: Session.inc  conectuser.php  user.inc
src/logsquid_frontend/www/webgui/: functions.js  header.php  searchtable.js  webgui.inc
src/logsquid_server/: Makefile.am  Makefile.in  logsquid_server.c  server.c  server.h
